# SindenM3Remap

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
dependencies/: CMakeLists.txt
src/: DeviceMeta.h  RawInput.cpp  RawInput.h  main.cpp
